--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
                 <p>직업: <span id="player-class">?</span></p>
                 <p>레벨: <span id="player-level">1</span></p>
                 <p>HP: <span id="player-hp">0</span>/<span id="player-max-hp">0</span></p>
+                <p>무기: <span id="player-weapon">0</span></p>
                 <p>AC: <span id="player-ac">10</span></p>
+                <p>갑옷: <span id="player-armor">없음</span></p>
+                <p>방패: <span id="player-shield">없음</span></p>
                 <p>경험치: <span id="player-xp">0</span>/<span id="player-next-level-xp">300</span></p>
                 <p>숙련 보너스: +<span id="player-proficiency">2</span></p>
                 <p>스킬 포인트: <span id="player-skill-points">0</span></p>
-                <p>골드: <span id="player-gold">0</span></p>
-                <p>무기: <span id="player-weapon">0</span></p>
-                <p>방어구: <span id="player-armor">0</span></p>
+                <p>골드: <span id="player-gold">0</span></p>                
               </div>
               <div id="player-stats">
                 <h4 style="text-align: center;">능력치</h3>
@@ -75,6 +76,7 @@
         </div>
     </div>
     <script src="./js/console.js"></script>
+    <script src="./js/utils.js"></script>
     <script src="./js/ui.js"></script>
     <script src="./js/item.js"></script>
     <script src="./js/equipments.js"></script>
