--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <p>스킬 포인트: <span id="player-skill-points">0</span></p>
                 <p>골드: <span id="player-gold">0</span></p>                
               </div>
-              <div id="player-stats" style="text-align: center;">
-                <h3>능력치</h3>
+              <div id="player-stats">
+                <h3 style="text-align: center;">능력치</h3>
                 <div id="player-stats-grid">
                   <p>근력: <span id="player-strength">10</span> <button class="stat-increase-btn" data-stat="strength" style="display:none;">+</button></p>
                   <p>민첩: <span id="player-dexterity">10</span> <button class="stat-increase-btn" data-stat="dexterity" style="display:none;">+</button></p>
@@ -74,7 +74,7 @@
     </div>
     <script src="./js/console.js"></script>
     <script src="./js/utils.js"></script>
-    <script src="./js/ui.js"></script>
+    <script src="./js/canvasManager.js"></script>
     <script src="./js/item.js"></script>
     <script src="./js/equipments.js"></script>
     <script src="./js/spells.js"></script>
