--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <script src="./js/console.js"></script>
     <script src="./js/utils.js"></script>
     <script src="./js/canvasManager.js"></script>
+    <script src="./js/dialogueManager.js"></script>
     <script src="./js/item.js"></script>
     <script src="./js/equipments.js"></script>
     <script src="./js/spells.js"></script>
