--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <button id="innButton">여관</button>
           <button id="shopButton">상점</button>
           <button id="guildButton">길드</button>
-          <button id="blacksmithButton">대장간</button>
+          <button id="forgeButton">대장간</button>
           <button id="dungeonButton">던전</button>
         </div>
         <div id="dungeonButtons" style="display: none;">
@@ -71,8 +71,8 @@
         </div>
         <div id="battleButtons" style="display: none;">
           <button id="attackButton">공격</button>
-          <button id="skillButton" class="sidebar-toggle">기술</button>
-          <button id="spellButton" class="sidebar-toggle">주문</button>
+          <!--<button id="skillButton" class="sidebar-toggle">기술</button>
+          <button id="spellButton" class="sidebar-toggle">주문</button>-->
           <button id="fleeButton">도망</button>
         </div>
       </div>
